@@ -1,3 +1,8 @@
+2009-07-02 Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V01-04-08
+	* put back missed setting of prescale index to PSservice and add dqmhistos to modmap
+
 2009-02-17  Emilio Meschi  <emilio.meschi@cern.ch>
 		
 	* tag V01-04-07
